@@ -10,6 +10,8 @@ Copyright GRAME (c) 2009,2010,2011
 ----------------------------------------------------
 Version 0.74
 - new 'dpage' message accepted by 'gmn' objects 
+- x and y variables: automatic range type detection (int | float)
+- polymorphism for the set 'txt' message params
 
 ----------------------------------------------------
 Version 0.73
